// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EventPageContent /> should render correctly when event refused 1`] = `
<EventPageContentstyle__Container>
  <EventPageContentstyle__Content>
    <Relay(EventModerationMotiveView)
      event={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "body": "je suis le body",
          "commentable": true,
          "googleMapsAddress": Object {
            "lat": 1234321,
            "lng": 123454321,
          },
          "id": "123id",
          "isRegistrationPossible": true,
          "isViewerParticipatingAtEvent": true,
          "media": Object {
            "url": "https://uneimagerandom.jpg",
          },
          "participants": Object {
            "totalCount": 1,
          },
          "title": "Je suis un événement",
          "url": "https://jesuislurl.com",
          "viewerDidAuthor": true,
        }
      }
    />
    <Thumbnail
      height="400px"
      image="https://uneimagerandom.jpg"
      width="100%"
    />
    <WYSIWYGRender
      className="description"
      value="je suis le body"
    />
    <Map
      center={
        Array [
          1234321,
          123454321,
        ]
      }
      style={
        Object {
          "height": "300px",
          "width": "1OO%",
          "zIndex": 1,
        }
      }
      zoom={10}
    >
      <ForwardRef(Leaflet(TileLayer))
        attribution="© <a href=\\"https://www.mapbox.com/about/maps/\\">Mapbox</a> © <a href=\\"http://osm.org/copyright\\">OpenStreetMap</a> <a href=\\"https://www.mapbox.com/map-feedback/#/-74.5/40/10\\">Improve this map</a>"
        url="https://api.mapbox.com/styles/v1/mapbox/streets-v10/tiles/256/{z}/{x}/{y}?access_token=***REMOVED***"
      />
      <ForwardRef(Leaflet(Marker))
        icon={
          NewClass {
            "_initHooksCalled": true,
            "options": Object {
              "iconAnchor": Array [
                20,
                40,
              ],
              "iconSize": Array [
                20,
                20,
              ],
              "iconUrl": "https://upload.wikimedia.org/wikipedia/commons/8/88/Map_marker.svg",
            },
          }
        }
        position={
          Array [
            1234321,
            123454321,
          ]
        }
      />
    </Map>
    <_default
      id="123id"
      title="Je suis un événement"
      url="https://jesuislurl.com"
    />
  </EventPageContentstyle__Content>
  <Relay(Connect(ParticipantList))
    event={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "body": "je suis le body",
        "commentable": true,
        "googleMapsAddress": Object {
          "lat": 1234321,
          "lng": 123454321,
        },
        "id": "123id",
        "isRegistrationPossible": true,
        "isViewerParticipatingAtEvent": true,
        "media": Object {
          "url": "https://uneimagerandom.jpg",
        },
        "participants": Object {
          "totalCount": 1,
        },
        "title": "Je suis un événement",
        "url": "https://jesuislurl.com",
        "viewerDidAuthor": true,
      }
    }
    setShowModalParticipant={[Function]}
  />
  <_default
    commentableId="123id"
  />
  <Relay(ModalParticipantList)
    event={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "body": "je suis le body",
        "commentable": true,
        "googleMapsAddress": Object {
          "lat": 1234321,
          "lng": 123454321,
        },
        "id": "123id",
        "isRegistrationPossible": true,
        "isViewerParticipatingAtEvent": true,
        "media": Object {
          "url": "https://uneimagerandom.jpg",
        },
        "participants": Object {
          "totalCount": 1,
        },
        "title": "Je suis un événement",
        "url": "https://jesuislurl.com",
        "viewerDidAuthor": true,
      }
    }
    onClose={[Function]}
    show={false}
  />
  <Fixed
    position={
      Object {
        "left": "66%",
      }
    }
    width="300px"
  >
    <Relay(UserRegister)
      event={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "body": "je suis le body",
          "commentable": true,
          "googleMapsAddress": Object {
            "lat": 1234321,
            "lng": 123454321,
          },
          "id": "123id",
          "isRegistrationPossible": true,
          "isViewerParticipatingAtEvent": true,
          "media": Object {
            "url": "https://uneimagerandom.jpg",
          },
          "participants": Object {
            "totalCount": 1,
          },
          "title": "Je suis un événement",
          "url": "https://jesuislurl.com",
          "viewerDidAuthor": true,
        }
      }
      user={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
        }
      }
    />
  </Fixed>
</EventPageContentstyle__Container>
`;

exports[`<EventPageContent /> should render correctly when no commentable 1`] = `
<EventPageContentstyle__Container>
  <EventPageContentstyle__Content>
    <Thumbnail
      height="400px"
      image="https://uneimagerandom.jpg"
      width="100%"
    />
    <WYSIWYGRender
      className="description"
      value="je suis le body"
    />
    <Map
      center={
        Array [
          1234321,
          123454321,
        ]
      }
      style={
        Object {
          "height": "300px",
          "width": "1OO%",
          "zIndex": 1,
        }
      }
      zoom={10}
    >
      <ForwardRef(Leaflet(TileLayer))
        attribution="© <a href=\\"https://www.mapbox.com/about/maps/\\">Mapbox</a> © <a href=\\"http://osm.org/copyright\\">OpenStreetMap</a> <a href=\\"https://www.mapbox.com/map-feedback/#/-74.5/40/10\\">Improve this map</a>"
        url="https://api.mapbox.com/styles/v1/mapbox/streets-v10/tiles/256/{z}/{x}/{y}?access_token=***REMOVED***"
      />
      <ForwardRef(Leaflet(Marker))
        icon={
          NewClass {
            "_initHooksCalled": true,
            "options": Object {
              "iconAnchor": Array [
                20,
                40,
              ],
              "iconSize": Array [
                20,
                20,
              ],
              "iconUrl": "https://upload.wikimedia.org/wikipedia/commons/8/88/Map_marker.svg",
            },
          }
        }
        position={
          Array [
            1234321,
            123454321,
          ]
        }
      />
    </Map>
    <_default
      id="123id"
      title="Je suis un événement"
      url="https://jesuislurl.com"
    />
  </EventPageContentstyle__Content>
  <Relay(Connect(ParticipantList))
    event={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "body": "je suis le body",
        "commentable": false,
        "googleMapsAddress": Object {
          "lat": 1234321,
          "lng": 123454321,
        },
        "id": "123id",
        "isRegistrationPossible": true,
        "isViewerParticipatingAtEvent": true,
        "media": Object {
          "url": "https://uneimagerandom.jpg",
        },
        "participants": Object {
          "totalCount": 1,
        },
        "title": "Je suis un événement",
        "url": "https://jesuislurl.com",
        "viewerDidAuthor": false,
      }
    }
    setShowModalParticipant={[Function]}
  />
  <Relay(ModalParticipantList)
    event={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "body": "je suis le body",
        "commentable": false,
        "googleMapsAddress": Object {
          "lat": 1234321,
          "lng": 123454321,
        },
        "id": "123id",
        "isRegistrationPossible": true,
        "isViewerParticipatingAtEvent": true,
        "media": Object {
          "url": "https://uneimagerandom.jpg",
        },
        "participants": Object {
          "totalCount": 1,
        },
        "title": "Je suis un événement",
        "url": "https://jesuislurl.com",
        "viewerDidAuthor": false,
      }
    }
    onClose={[Function]}
    show={false}
  />
  <Fixed
    position={
      Object {
        "left": "66%",
      }
    }
    width="300px"
  >
    <Relay(UserRegister)
      event={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "body": "je suis le body",
          "commentable": false,
          "googleMapsAddress": Object {
            "lat": 1234321,
            "lng": 123454321,
          },
          "id": "123id",
          "isRegistrationPossible": true,
          "isViewerParticipatingAtEvent": true,
          "media": Object {
            "url": "https://uneimagerandom.jpg",
          },
          "participants": Object {
            "totalCount": 1,
          },
          "title": "Je suis un événement",
          "url": "https://jesuislurl.com",
          "viewerDidAuthor": false,
        }
      }
      user={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
        }
      }
    />
  </Fixed>
</EventPageContentstyle__Container>
`;

exports[`<EventPageContent /> should render correctly when no google address 1`] = `
<EventPageContentstyle__Container>
  <EventPageContentstyle__Content>
    <Thumbnail
      height="400px"
      image="https://uneimagerandom.jpg"
      width="100%"
    />
    <WYSIWYGRender
      className="description"
      value="je suis le body"
    />
    <_default
      id="123id"
      title="Je suis un événement"
      url="https://jesuislurl.com"
    />
  </EventPageContentstyle__Content>
  <Relay(Connect(ParticipantList))
    event={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "body": "je suis le body",
        "commentable": true,
        "googleMapsAddress": null,
        "id": "123id",
        "isRegistrationPossible": true,
        "isViewerParticipatingAtEvent": true,
        "media": Object {
          "url": "https://uneimagerandom.jpg",
        },
        "participants": Object {
          "totalCount": 1,
        },
        "title": "Je suis un événement",
        "url": "https://jesuislurl.com",
        "viewerDidAuthor": false,
      }
    }
    setShowModalParticipant={[Function]}
  />
  <_default
    commentableId="123id"
  />
  <Relay(ModalParticipantList)
    event={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "body": "je suis le body",
        "commentable": true,
        "googleMapsAddress": null,
        "id": "123id",
        "isRegistrationPossible": true,
        "isViewerParticipatingAtEvent": true,
        "media": Object {
          "url": "https://uneimagerandom.jpg",
        },
        "participants": Object {
          "totalCount": 1,
        },
        "title": "Je suis un événement",
        "url": "https://jesuislurl.com",
        "viewerDidAuthor": false,
      }
    }
    onClose={[Function]}
    show={false}
  />
  <Fixed
    position={
      Object {
        "left": "66%",
      }
    }
    width="300px"
  >
    <Relay(UserRegister)
      event={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "body": "je suis le body",
          "commentable": true,
          "googleMapsAddress": null,
          "id": "123id",
          "isRegistrationPossible": true,
          "isViewerParticipatingAtEvent": true,
          "media": Object {
            "url": "https://uneimagerandom.jpg",
          },
          "participants": Object {
            "totalCount": 1,
          },
          "title": "Je suis un événement",
          "url": "https://jesuislurl.com",
          "viewerDidAuthor": false,
        }
      }
      user={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
        }
      }
    />
  </Fixed>
</EventPageContentstyle__Container>
`;

exports[`<EventPageContent /> should render correctly when no registration possible 1`] = `
<EventPageContentstyle__Container>
  <EventPageContentstyle__Content>
    <Thumbnail
      height="400px"
      image="https://uneimagerandom.jpg"
      width="100%"
    />
    <WYSIWYGRender
      className="description"
      value="je suis le body"
    />
    <Map
      center={
        Array [
          1234321,
          123454321,
        ]
      }
      style={
        Object {
          "height": "300px",
          "width": "1OO%",
          "zIndex": 1,
        }
      }
      zoom={10}
    >
      <ForwardRef(Leaflet(TileLayer))
        attribution="© <a href=\\"https://www.mapbox.com/about/maps/\\">Mapbox</a> © <a href=\\"http://osm.org/copyright\\">OpenStreetMap</a> <a href=\\"https://www.mapbox.com/map-feedback/#/-74.5/40/10\\">Improve this map</a>"
        url="https://api.mapbox.com/styles/v1/mapbox/streets-v10/tiles/256/{z}/{x}/{y}?access_token=***REMOVED***"
      />
      <ForwardRef(Leaflet(Marker))
        icon={
          NewClass {
            "_initHooksCalled": true,
            "options": Object {
              "iconAnchor": Array [
                20,
                40,
              ],
              "iconSize": Array [
                20,
                20,
              ],
              "iconUrl": "https://upload.wikimedia.org/wikipedia/commons/8/88/Map_marker.svg",
            },
          }
        }
        position={
          Array [
            1234321,
            123454321,
          ]
        }
      />
    </Map>
    <_default
      id="123id"
      title="Je suis un événement"
      url="https://jesuislurl.com"
    />
  </EventPageContentstyle__Content>
  <Relay(Connect(ParticipantList))
    event={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "body": "je suis le body",
        "commentable": true,
        "googleMapsAddress": Object {
          "lat": 1234321,
          "lng": 123454321,
        },
        "id": "123id",
        "isRegistrationPossible": false,
        "isViewerParticipatingAtEvent": true,
        "media": Object {
          "url": "https://uneimagerandom.jpg",
        },
        "participants": Object {
          "totalCount": 1,
        },
        "title": "Je suis un événement",
        "url": "https://jesuislurl.com",
        "viewerDidAuthor": false,
      }
    }
    setShowModalParticipant={[Function]}
  />
  <_default
    commentableId="123id"
  />
  <Relay(ModalParticipantList)
    event={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "body": "je suis le body",
        "commentable": true,
        "googleMapsAddress": Object {
          "lat": 1234321,
          "lng": 123454321,
        },
        "id": "123id",
        "isRegistrationPossible": false,
        "isViewerParticipatingAtEvent": true,
        "media": Object {
          "url": "https://uneimagerandom.jpg",
        },
        "participants": Object {
          "totalCount": 1,
        },
        "title": "Je suis un événement",
        "url": "https://jesuislurl.com",
        "viewerDidAuthor": false,
      }
    }
    onClose={[Function]}
    show={false}
  />
</EventPageContentstyle__Container>
`;

exports[`<EventPageContent /> should render correctly when type online 1`] = `
<EventPageContentstyle__Container>
  <EventPageContentstyle__Content>
    <Relay(EventOnlineThumbnail)
      event={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "body": "je suis le body",
          "commentable": true,
          "googleMapsAddress": Object {
            "lat": 1234321,
            "lng": 123454321,
          },
          "id": "123id",
          "isRegistrationPossible": true,
          "isViewerParticipatingAtEvent": true,
          "media": Object {
            "url": "https://uneimagerandom.jpg",
          },
          "participants": Object {
            "totalCount": 1,
          },
          "title": "Je suis un événement",
          "url": "https://jesuislurl.com",
          "viewerDidAuthor": false,
        }
      }
    />
    <WYSIWYGRender
      className="description"
      value="je suis le body"
    />
    <_default
      id="123id"
      title="Je suis un événement"
      url="https://jesuislurl.com"
    />
  </EventPageContentstyle__Content>
  <Relay(Connect(ParticipantList))
    event={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "body": "je suis le body",
        "commentable": true,
        "googleMapsAddress": Object {
          "lat": 1234321,
          "lng": 123454321,
        },
        "id": "123id",
        "isRegistrationPossible": true,
        "isViewerParticipatingAtEvent": true,
        "media": Object {
          "url": "https://uneimagerandom.jpg",
        },
        "participants": Object {
          "totalCount": 1,
        },
        "title": "Je suis un événement",
        "url": "https://jesuislurl.com",
        "viewerDidAuthor": false,
      }
    }
    setShowModalParticipant={[Function]}
  />
  <Relay(ModalParticipantList)
    event={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "body": "je suis le body",
        "commentable": true,
        "googleMapsAddress": Object {
          "lat": 1234321,
          "lng": 123454321,
        },
        "id": "123id",
        "isRegistrationPossible": true,
        "isViewerParticipatingAtEvent": true,
        "media": Object {
          "url": "https://uneimagerandom.jpg",
        },
        "participants": Object {
          "totalCount": 1,
        },
        "title": "Je suis un événement",
        "url": "https://jesuislurl.com",
        "viewerDidAuthor": false,
      }
    }
    onClose={[Function]}
    show={false}
  />
  <Fixed
    position={
      Object {
        "left": "66%",
      }
    }
    width="300px"
  >
    <Relay(UserRegister)
      event={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "body": "je suis le body",
          "commentable": true,
          "googleMapsAddress": Object {
            "lat": 1234321,
            "lng": 123454321,
          },
          "id": "123id",
          "isRegistrationPossible": true,
          "isViewerParticipatingAtEvent": true,
          "media": Object {
            "url": "https://uneimagerandom.jpg",
          },
          "participants": Object {
            "totalCount": 1,
          },
          "title": "Je suis un événement",
          "url": "https://jesuislurl.com",
          "viewerDidAuthor": false,
        }
      }
      user={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
        }
      }
    />
  </Fixed>
</EventPageContentstyle__Container>
`;

exports[`<EventPageContent /> should render correctly when type physical 1`] = `
<EventPageContentstyle__Container>
  <EventPageContentstyle__Content>
    <Thumbnail
      height="400px"
      image="https://uneimagerandom.jpg"
      width="100%"
    />
    <WYSIWYGRender
      className="description"
      value="je suis le body"
    />
    <Map
      center={
        Array [
          1234321,
          123454321,
        ]
      }
      style={
        Object {
          "height": "300px",
          "width": "1OO%",
          "zIndex": 1,
        }
      }
      zoom={10}
    >
      <ForwardRef(Leaflet(TileLayer))
        attribution="© <a href=\\"https://www.mapbox.com/about/maps/\\">Mapbox</a> © <a href=\\"http://osm.org/copyright\\">OpenStreetMap</a> <a href=\\"https://www.mapbox.com/map-feedback/#/-74.5/40/10\\">Improve this map</a>"
        url="https://api.mapbox.com/styles/v1/mapbox/streets-v10/tiles/256/{z}/{x}/{y}?access_token=***REMOVED***"
      />
      <ForwardRef(Leaflet(Marker))
        icon={
          NewClass {
            "_initHooksCalled": true,
            "options": Object {
              "iconAnchor": Array [
                20,
                40,
              ],
              "iconSize": Array [
                20,
                20,
              ],
              "iconUrl": "https://upload.wikimedia.org/wikipedia/commons/8/88/Map_marker.svg",
            },
          }
        }
        position={
          Array [
            1234321,
            123454321,
          ]
        }
      />
    </Map>
    <_default
      id="123id"
      title="Je suis un événement"
      url="https://jesuislurl.com"
    />
  </EventPageContentstyle__Content>
  <Relay(Connect(ParticipantList))
    event={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "body": "je suis le body",
        "commentable": true,
        "googleMapsAddress": Object {
          "lat": 1234321,
          "lng": 123454321,
        },
        "id": "123id",
        "isRegistrationPossible": true,
        "isViewerParticipatingAtEvent": true,
        "media": Object {
          "url": "https://uneimagerandom.jpg",
        },
        "participants": Object {
          "totalCount": 1,
        },
        "title": "Je suis un événement",
        "url": "https://jesuislurl.com",
        "viewerDidAuthor": false,
      }
    }
    setShowModalParticipant={[Function]}
  />
  <_default
    commentableId="123id"
  />
  <Relay(ModalParticipantList)
    event={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "body": "je suis le body",
        "commentable": true,
        "googleMapsAddress": Object {
          "lat": 1234321,
          "lng": 123454321,
        },
        "id": "123id",
        "isRegistrationPossible": true,
        "isViewerParticipatingAtEvent": true,
        "media": Object {
          "url": "https://uneimagerandom.jpg",
        },
        "participants": Object {
          "totalCount": 1,
        },
        "title": "Je suis un événement",
        "url": "https://jesuislurl.com",
        "viewerDidAuthor": false,
      }
    }
    onClose={[Function]}
    show={false}
  />
  <Fixed
    position={
      Object {
        "left": "66%",
      }
    }
    width="300px"
  >
    <Relay(UserRegister)
      event={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "body": "je suis le body",
          "commentable": true,
          "googleMapsAddress": Object {
            "lat": 1234321,
            "lng": 123454321,
          },
          "id": "123id",
          "isRegistrationPossible": true,
          "isViewerParticipatingAtEvent": true,
          "media": Object {
            "url": "https://uneimagerandom.jpg",
          },
          "participants": Object {
            "totalCount": 1,
          },
          "title": "Je suis un événement",
          "url": "https://jesuislurl.com",
          "viewerDidAuthor": false,
        }
      }
      user={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
        }
      }
    />
  </Fixed>
</EventPageContentstyle__Container>
`;
